наладила работу с vite

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Каталог</title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <script src="/src/js/catalog.js" type="module"></script>
+    <!-- <link rel="stylesheet" href="src/css/style.css" /> -->
   </head>
   <body>
     <!-- Шапка начало -->
@@ -186,14 +187,14 @@
         </div>
       </div>
       <div class="inform-container">
-        <div class="company">Maroon &copy 2020 Все права защищены</div>
+        <div class="company">Maroon &copy; 2020 Все права защищены</div>
         <a href="#" class="politic_conf">Политика конфиденциальности</a>
       </div>
     </footer>
     <!-- Footer конец -->
 
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=53af7210-735a-4eb7-9c7b-d1e8805991bc&lang=ru_RU"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?&lang=ru_RU"></script>
     <script src="/src/js/map.js"></script>
-    <script src="/src/js/catalog.js" type="module"></script>
+    <!-- <script src="/src/js/catalog.js" type="module"></script> -->
   </body>
 </html>
