--- a/basket.html
+++ b/basket.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Корзина</title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <!-- <link rel="stylesheet" href="src/css/style.css" /> -->
   </head>
   <body>
     <!-- Шапка начало -->
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="inform-container">
-        <div class="company">Maroon &copy 2020 Все права защищены</div>
+        <div class="company">Maroon &copy; 2020 Все права защищены</div>
         <a href="#" class="politic_conf">Политика конфиденциальности</a>
       </div>
     </footer>
