--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="src/css/style.css" />
+    <!-- <link rel="stylesheet" href="src/css/style.css" /> -->
   </head>
   <body>
     <!-- Всплывающее модальнок окно начало-->
-    <div class="popup open_popup" id="popup">
+    <div class="popup" id="popup">
       <div class="popup__box animate__animated animate__fadeInDown">
         <button class="popup-close-btn" id="popupClose">
           <i class="fa-solid fa-xmark fa-xl"></i>
@@ -495,7 +495,7 @@
         </div>
       </div>
       <div class="inform-container">
-        <div class="company">Maroon &copy 2020 Все права защищены</div>
+        <div class="company">Maroon &copy; 2020 Все права защищены</div>
         <a href="#" class="politic_conf">Политика конфиденциальности</a>
       </div>
     </footer>
@@ -516,8 +516,8 @@
     ></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=53af7210-735a-4eb7-9c7b-d1e8805991bc&lang=ru_RU"></script>
     <script src="/src/js/map.js"></script>
-    <script src="/src/js/burger.js"></script>
+    <script src="/src/js/burger.js" type="module"></script>
     <script src="/src/js/validate.js"></script>
-    <script src="/src/js/index.js"></script>
+    <script src="/src/js/index.js" type="module"></script>
   </body>
 </html>
